<resources>
    <string name="app_name">FrIeNDr</string>
    <string name="interest">Interest</string>
    <string name="add_interests">Add interests</string>
    <string name="your_groups">Your groups</string>
    <string name="mobile_development">Mobile development</string>
    <string name="find_a_new_group">Find a new group</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="go_to_event_chat">Go to event chat</string>
    <string name="add_new_event">Add new event</string>
    <string name="to_general_chat">To General Chat</string>
    <string name="events">Events</string>
    <string name="join_event">Join Event</string>
    <string name="search_interest">Search interest:</string>
    <string name="add_interest">Add interest</string>
    <string name="create_new_interest">Create new interest</string>
    <string name="search_group">Search group</string>
    <string name="filter">Filter</string>
    <string name="max_amount_of_members">Max amount of members:</string>
    <string name="min_amount_of_members">Min amount of members:</string>
    <string name="new_groups">New groups</string>
    <string name="more_info">More info</string>
    <string name="join">Join</string>
    <string name="create_a_new_group">Create A New Group</string>
    <string name="group_name">Group name:</string>
    <string name="group_description">Group description:</string>
    <string name="add_group">Add Group</string>
    
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_loginBtn">Login</string>
    <string name="login_registerBtn">Register</string>
    <string name="login_new_user">New user?</string>
    <string name="reg_full_name">Full Name</string>
    <string name="reg_Username">Username</string>
    <string name="reg_date_of_birth">Date of birth</string>
    <string name="reg_gender">Gender</string>
    <string name="reg_female">Female</string>
    <string name="reg_male">Male</string>
    <string name="reg_visible_to_others">Visible to others</string>
    <string name="reg_ok">OK</string>
    <string name="reg_password">Password</string>
    <string name="reg_confirm_password">Confirm password</string>
    <string name="reg_register">Register</string>
    <string name="home_friendr">FrIeNDr</string>
    <string name="home_slogan">Real friendship starts here!</string>
    <string name="home_sign_up">Sign up</string>
    <string name="home_or">OR</string>
    <string name="home_log_in">Log in</string>
    <string name="go_to_group_page">Go to group page</string>
    <string name="go_to_general_chat">Go to general chat</string>

    <string-array name="interests_array">
        <item>Mobile</item>
        <item>Workout</item>
    </string-array>
</resources>
